Bug 45247 [Structure Compare] Show compare editor structure in Outline view